--- a/Sphere/Client/Style/Style.css
+++ b/Sphere/Client/Style/Style.css
@@ -46,6 +46,11 @@ h5 {
     font-size: inherit;
 }
 
+label {
+    font-size: 12px;
+    margin-bottom: 4px;
+}
+
 /*.glyphicon.glyphicon-yubikey:before {*/
 /*display: block;*/
 /*width: 14px;*/
@@ -56,7 +61,7 @@ h5 {
 
 .alert {
     padding: 10px;
-    margin-bottom: 10px;
+    margin-bottom: 5px;
 }
 
 .input-group .selecter-selected {
