--- a/Sphere/Client/Frontend/Input/Type/AutoCompleter.twig
+++ b/Sphere/Client/Frontend/Input/Type/AutoCompleter.twig
@@ -9,7 +9,7 @@
         </span>
         {% endif %}
         <input type="text" class="form-control" name="{{ ElementName }}" placeholder="{{ ElementPlaceholder }}"
-               value="{{ ElementValue }}" autocomplete="off"/>
+               value="{{ ElementValue }}"/>
         {{ ElementFeedbackIcon }}
         {% if( ElementIcon is not empty ) %}
     </div>
