--- a/Sphere/Client/Frontend/Input/Type/CheckBox.twig
+++ b/Sphere/Client/Frontend/Input/Type/CheckBox.twig
@@ -8,7 +8,7 @@
             </span>
         {% endif %}
         <input id="{{ ElementHash }}" type="checkbox" name="{{ ElementName }}"
-               value="{{ ElementValue }}" autocomplete="off"/>
+               value="{{ ElementValue }}"/>
         {% if( ElementLabel is not empty ) %}
             <label for="{{ ElementHash }}">{{ ElementLabel }}</label>
         {% endif %}
