--- a/Sphere/Client/Frontend/Input/Type/DatePicker.twig
+++ b/Sphere/Client/Frontend/Input/Type/DatePicker.twig
@@ -12,7 +12,7 @@
                placeholder="{{ ElementPlaceholder }}"
                data-date-format="DD.MM.YYYY" data-date-language="de" data-date-pickTime="false"
                data-bv-date-format="DD.MM.YYYY"
-               value="{{ ElementValue }}" autocomplete="off"/>
+               value="{{ ElementValue }}"/>
 
         {{ ElementFeedbackIcon }}
         {% if( ElementIcon is not empty ) %}
