--- a/Sphere/Client/Frontend/Table/Type/Table.twig
+++ b/Sphere/Client/Frontend/Table/Type/Table.twig
@@ -1,7 +1,7 @@
 {% if( TableTitle is not empty ) %}
     {{ TableTitle }}
 {% endif %}
-<table class="table table-bordered table-condensed small">
+<table class="table table-bordered table-condensed">
     {% for TableHead in HeadList %}
         <thead>
         {% for TableRow in TableHead.getTableRow %}
