--- a/Sphere/Client/Frontend/Layout/Type/LayoutThumbnail.twig
+++ b/Sphere/Client/Frontend/Layout/Type/LayoutThumbnail.twig
@@ -1,5 +1,5 @@
 <div class="thumbnail">
-    <img class="{{ Type }}" src="{{ File }}">
+    <img class="img-responsive {{ Type }}" src="{{ File }}" height="{{ Height }}">
 
     <div class="caption text-center">
         {% if( Title|length > 0) %}
