--- a/Sphere/Client/Frontend/Button/Link/Primary.twig
+++ b/Sphere/Client/Frontend/Button/Link/Primary.twig
@@ -1,1 +1,2 @@
-<a href="{{ UrlBase }}{{ ElementPath }}" class="btn btn-primary">{{ ElementIcon }} {{ ElementName }}</a>
+<a href="{{ UrlBase }}{{ ElementPath }}" class="btn btn-primary" data-toggle="tooltip"
+   title="{{ ElementToolTip }}">{{ ElementIcon }} {{ ElementName }}</a>
