--- a/Sphere/Client/Frontend/Button/Link/Success.twig
+++ b/Sphere/Client/Frontend/Button/Link/Success.twig
@@ -1,1 +1,2 @@
-<a href="{{ UrlBase }}{{ ElementPath }}" class="btn btn-success">{{ ElementIcon }} {{ ElementName }}</a>
+<a href="{{ UrlBase }}{{ ElementPath }}" class="btn btn-success" data-toggle="tooltip"
+   title="{{ ElementToolTip }}">{{ ElementIcon }} {{ ElementName }}</a>
