--- a/Sphere/Client/Frontend/Button/Link/Danger.twig
+++ b/Sphere/Client/Frontend/Button/Link/Danger.twig
@@ -1,1 +1,2 @@
-<a href="{{ UrlBase }}{{ ElementPath }}" class="btn btn-danger">{{ ElementIcon }} {{ ElementName }}</a>
+<a href="{{ UrlBase }}{{ ElementPath }}" class="btn btn-danger" data-toggle="tooltip"
+   title="{{ ElementToolTip }}">{{ ElementIcon }} {{ ElementName }}</a>
